update crawler products schema, controller, router, service
